common_shaders = files([
	'text.frag',
	'text.vert',
])

client_shaders = files([
	'basic.frag',
	'chunks.vert',
	'chunks_depth.vert',
	'empty.frag',
	'empty.frag',
	'empty.frag',
	'instanced_model.vert',
	'instanced_model_depth.vert',
	'instanced_model_depth.vert',
	'selection.vert',
	'sun.frag',
	'sun.vert',
	'water.frag',
	'water.vert',
	'world.frag',
])

terragen_shaders = files([
	'terragen_mesh.frag',
	'terragen_mesh.vert',
])
