embedded_assets_static += files(
    'basic.frag',
    'chunks.vert',
    'chunks_depth.vert',
    'empty.frag',
    'instanced_model.vert',
    'instanced_model_depth.vert',
    'points.vert',
    'selection.vert',
    'shapes.frag',
    'shapes.vert',
    'sun.frag',
    'sun.vert',
    'terragen_mesh.frag',
    'terragen_mesh.vert',
    'terragen_pixels.frag',
    'terragen_pixels.vert',
    'text.frag',
    'text.vert',
    'water.frag',
    'water.vert',
    'world.frag',
)
